# OCRust

./: Cargo.toml
src/: lib.rs  mlp.rs  mmlp.rs
src/mlp/: layer.rs  learning.rs  neuron.rs
tests/: integration_test.rs  mlp-benchmarking.rs  mlp-learning.rs  mlp-serialization.rs  mmlp-serialization.rs
