[package]
name = "ocrust"
version = "0.1.0"
authors = ["Paul `Dettorer` Hervot <dettorer@dettorer.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.13", features = ["serde"] }
ndarray-rand = "0.11"

[dev-dependencies]
itertools = "0.9"
